samples/_failures_safe/1761210772_f9ba6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e774291e.c: In function ‘main’:
./samples/SAFE/__tmp_e774291e.c:148:20: error: missing terminating " character
  148 |             printf("Invalid edge
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e774291e.c:148:13: error: expected expression at end of input
  148 |             printf("Invalid edge
      |             ^~~~~~
./samples/SAFE/__tmp_e774291e.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e774291e.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e774291e.c:148:13: error: expected declaration or statement at end of input
